--- a/index.css
+++ b/index.css
@@ -1,24 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Spinnaker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Koulen&family=Spinnaker&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Spinnaker', sans-serif;
-    
+    /*font-family: 'Spinnaker', sans-serif;*/
+    font-family: 'Poppins',sans-serif;
 }
 
-.section-np1{
-    padding: 40px 40px;
-}
-
-.section-m1{
-    margin: 0 40px;
-}
-body{
-    width: 100%;
-
-}
 h1{
     font-size: 50px;
     line-height: 64px;
@@ -29,54 +19,114 @@ h2{
     line-height: 54px;
 }
 
-/*HEADER*/
+/*------------HEADER----------------*/
 
-#header{
+header{
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    padding: 17px 40px;
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+
+     /*--------barra NAV pegajosa--------*/
+     position: sticky;
+     z-index: 1000;
+     width: 100%;
+     height: 80px;
+     top: 0;
+     left: 0;
+     box-shadow: 0px 1px 10px rgba(7, 7, 7, 0.295);
+}
+
+.logo img{
+    cursor: pointer;
+    height: 55px;
+}
+.navbar{
+    display: flex;
+    align-items: center;
+}
+.navbar ul{
+    display: flex;
+    position: relative;
+    gap: 50px;
+
+}
+
+.navbar ul li{
+    list-style: none;
+    
+}
+
+.navbar ul li a{
+    position: relative;
+    text-decoration: none;
+    text-transform:uppercase;
+    font-size: 1.1rem;
+    font-weight: 500;
+    color: #000000;
+    /* transition: all 0.5s ease; */
+    letter-spacing: 0.1em;
+}
+
+/* .navbar ul li a:hover{
+    background-color: #fff;
+    padding: 10px 10px;
+    border-radius: 15px;
+    color: #000000;
+} */
+
+.navbar ul li a::before{
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    width: 100%;
+    height: 2px;
+    background: rgba(5, 5, 5, 0.671);
+    transform: scaleX(0);
+    transition: transform 0.5s ease-in-out;
+    transform-origin: right;
+
+}
+
+.navbar ul li a:hover::before{
+    transform: scaleX(1);
+    transform-origin: left;
+}
+/* .iconos{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 13px 60px;
-    
-    background-color: rgb(19, 19, 19);
-     /*barra NAV pegajosa*/
-  
-     position: sticky;
-     z-index: 1000;
-     top: 0;
-     left: 0;
+} */
 
-}
-
-#header img {
-    height: 55px;
-    width: auto;
-
-}
-
-#navbar{
+.iconos ul{
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-#navbar li{
+.iconos ul li{
     list-style: none;
     padding: 0px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
 }
 
-#navbar li a{
+.iconos ul li a{
     text-decoration: none;
-    font-size: 17px;
-    font-weight: 590;
-    color: #fff;
-    transition: 0.3s ease;
-}
-
-#navbar li a:hover{
-    background-color: #fff;
-    padding: 8px 20px;
-    border-radius: 15px;
+    text-transform:uppercase;
+    font-size: 1.1rem;
     color: #000000;
+    transition: 0.8s ease;
+    position: absolute;
+}
+.iconos ul li a:hover{
+    background-color: #fff;
+    font-size: 1.5rem;
+    color: #000;
 }
 
 /*NAV-MOBILE*/
@@ -89,11 +139,11 @@ h2{
 /*SECCION - PRINCIPAL*/
 
 #principal{
-    background-image: url("hero2.jpg");
-    height: 85vh;
+    /* background-image: url("hero2.jpg"); */
+    height: 100vh;
     width: 100%;
+    z-index: 10;
     background-size: cover;
-    padding: 0 80px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -210,18 +260,22 @@ h2{
     
 }
 
+
 /*NUEVOS INGRESOS*/
 
 #secundario{
-   
     text-align: center;
+}
+
+.titulo_ingresos{
+    display: block;
 }
 
 #secundario .ingresos-container{
     display: flex;
-
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
+    max-width: 1200px;
 
 }
 
@@ -231,9 +285,10 @@ h2{
     height: 450px;
     padding: 1rem;
     border: 2px solid #D9D9D9;
+    margin: 15px 40px;
     
     box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.2);
-    margin: 15px 0px;
+
     transition: 0.3s ease;
     position: relative;
     
@@ -343,7 +398,7 @@ h2{
 /*MEDIA QUERY*/
 
 @media (max-width:799px) {
-    #navbar {
+    .navbar {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -353,15 +408,15 @@ h2{
         right: -300px;
         height: 100vh;
         width: 300px;
-        background-color:#106b86e5;
-        box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+        background-color:#fc7323e5;
+        box-shadow: 0 40px 60px rgba(201, 247, 0, 0.1);
         padding: 80px 0 0 10px;
     }
 
-    #navbar li{
+    .navbar li{
         padding-bottom: 25px;
     }
-    
+
     #mobile{
         display: flex;
         align-items: center;
