--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ header{
     display: flex;
     justify-content:space-between;
     align-items: center;
-    padding: 17px 40px;
+    padding: 20px 40px;
     background-color: rgb(255, 255, 255);
     position: absolute;
 
@@ -41,7 +41,8 @@ header{
 
 .logo img{
     cursor: pointer;
-    height: 55px;
+    height: 50px;
+    
 }
 .navbar{
     display: flex;
@@ -70,20 +71,13 @@ header{
     letter-spacing: 0.1em;
 }
 
-/* .navbar ul li a:hover{
-    background-color: #fff;
-    padding: 10px 10px;
-    border-radius: 15px;
-    color: #000000;
-} */
-
 .navbar ul li a::before{
     content: '';
     position: absolute;
     bottom: -2px;
     width: 100%;
     height: 2px;
-    background: rgba(5, 5, 5, 0.671);
+    background: rgba(16, 107, 134, 0.898);
     transform: scaleX(0);
     transition: transform 0.5s ease-in-out;
     transform-origin: right;
@@ -124,9 +118,8 @@ header{
     position: absolute;
 }
 .iconos ul li a:hover{
-    background-color: #fff;
-    font-size: 1.5rem;
-    color: #000;
+    color:  rgba(16, 107, 134, 0.898);
+    transform: translateY(-3px) scale(1.3);
 }
 
 /*NAV-MOBILE*/
@@ -138,9 +131,9 @@ header{
 
 /*SECCION - PRINCIPAL*/
 
-#principal{
+.principal{
     /* background-image: url("hero2.jpg"); */
-    height: 100vh;
+    /* height: 100vh;
     width: 100%;
     z-index: 10;
     background-size: cover;
@@ -148,7 +141,25 @@ header{
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    opacity: 15px ;
+    opacity: 15px ; */
+    display: flex;
+    width: 100%;
+    padding-bottom: 10px;
+}
+
+.principal img{
+    width: 0px;
+    flex-grow: 1;
+    object-fit: cover;
+    opacity: .95;
+    transition: .8s ease;
+}
+
+.principal img:hover{
+    cursor: crosshair;
+    width: 50px;
+    opacity: 1;
+    filter: contrast(120%);
 }
 
 /* #principal h1{
@@ -156,7 +167,7 @@ header{
  
 } */
 
-#principal h2{
+/* #principal h2{
     color: #fff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -176,18 +187,19 @@ header{
 #principal button:hover{
     background-color: #fff;
     color: #000000;
-}
+} */
 
 /*PRODUCTOS NUEVOS*/
 
 #productos{
     text-align: center;
+    padding-top: 80px;
 }
 
 #productos .productos-container{
     display: flex;
     justify-content: space-between;
-    padding-top: 45px;
+    padding: 45px;
     flex-wrap:wrap;
 }
 
@@ -200,9 +212,7 @@ header{
     position: relative;
     display: flex;
     align-items: flex-end;
-    box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
-    border-radius: 30px;
-    border: 2px solid #D9D9D9;
+
     transition: 0.5s ease-in-out;
     
     
@@ -272,10 +282,14 @@ header{
 }
 
 #secundario .ingresos-container{
-    display: flex;
+    /* display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    max-width: 1200px;
+    max-width: 1200px; */
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 3rem;
+    justify-items: center;
 
 }
 
